Added code coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,12 @@ python:
   - "nightly"
   - "pypy"
   - "pypy3"
-# command to install dependencies
+
 install:
-  - pip install -r requirements.txt
-# command to run tests
+  - pip install -r requirements-dev.txt
+
 script:
-  - py.test # or py.test for Python versions 3.5 and below
+  - py.test --cov=./stream
+
+after_success:
+  - codecov
