--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ python:
 install:
   - pip install --upgrade pip
   - pip install pipenv
+  - pipenv install
 
 script:
   - pipenv run py.test --cov=./stream
