--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ python:
 install:
   - pip install --upgrade pip
   - pip install pipenv
-  - pipenv install
+  - pipenv install --dev
 
 script:
   - pipenv run py.test --cov=./stream
